死锁测试，lock和synchronized的区别